src/App.css
.footnote {
    font-size: 0.8em;
    color: #666;
    margin-top: 10px;
    text-align: left;
    bottom: 0;
}
body {
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 960px;
    margin: 0 auto;
    padding: 20px;
}

h2 {
    color: #333;
    margin-bottom: 20px;
}



input {
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-bottom: 10px;
    margin-left: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
    box-sizing: border-box;
}

select {
    padding-right: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-bottom: 10px;
    margin-left: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
    box-sizing: border-box;
}

button {
    padding: 10px 20px;
    background-color: #007BFF;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

button:hover {
    background-color: #0056b3;
}

table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 10px;
}

table, th, td {
    border: 1px solid #ddd;
    padding: 10px;
}

td[id="sections"] {
    max-width: 200px;
    overflow: auto;
}


th {
    background-color: #f2f2f2;
}

